--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+   - images/dicee 2.jpg
+   - images/dicee 1.png
+   - images/dicee 3.jpg
+   - images/dicee4.png
+   - images/dicee5.png
+   - images/dicee6.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
